--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <center>
   <h3 class="heading">Changing font-size of text in Realtime
     <br>
-    <span class="text-info note">NOTE - Get your left wrist and right wrist closer to redouce the font-size of text and far to increase.</span>
+    <span class="text-info note">NOTE - Get your left wrist and right wrist closer to redouce the font-size of text and far to increase.Move your shoulders up to change the colour of the text.</span>
     <br>
     <span id="sq-length"></span>
   </h3>
